Resize, Sample Images, Hover Okay
    * TODO : Icon Out of Group (Break group)
    *        Group Click

--- a/sample.html
+++ b/sample.html
@@ -1,50 +1,135 @@
 <!doctype html>
- 
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>jQuery UI Sortable - Display as grid</title>
- 
+  <head>
+    <meta charset="utf-8">
+    <title>OS X Style Launchpad Javascript</title>
+   
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
+    <script src="lpsicongroup.js"></script>
+    <link href="lpsicongroup.css" rel="stylesheet" type="text/css">
+  </head>
 
-  <!--link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" /-->
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
-  <script src="lpsicongroup.js"></script>
-  <link href="lpsicongroup.css" rel="stylesheet" type="text/css">
-  <script>
 
-  </script>
-</head>
-<body>
+  <body>
+   
  
 <div id="sortable" class="lps_container">
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
-  <div class="ui-state-default lps_icon"><img src="http://www.burgerbecky.com/fanfiction_files/pdf-icon-100x100.gif"/></div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+    
 </div>
  
  
