--- a/sample2.html
+++ b/sample2.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -16,112 +17,112 @@
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_single">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
+        <img class = "lps_icon_image" src="icon.png">
         <div class="icon_description">some long long long text</div>
       </div>
     </div>
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_single">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
       </div>
     </div>
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_group">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
       </div>
-      <div class="icon_description">Quest Group</div>
+      <div class="icon_description">Group</div>
     </div>
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_group">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
       </div>
-      <div class="icon_description">Quest Group</div>
+      <div class="icon_description">Group</div>
     </div>
     
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_group">      
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
       </div>
-      <div class="icon_description">Quest Group</div>
+      <div class="icon_description">Group</div>
     </div>
     
     <div class="ui-state-default lps_icon ui-droppable"> 
       <div class="lps_icon_group">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
       </div>
-      <div class="icon_description">Quest Group</div>
+      <div class="icon_description">Group</div>
     </div>
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_group">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png" class="lps_icon_small">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
+        <img class = "lps_icon_image" src="icon.png" class="lps_icon_small">
+        <div class="icon_description">Application</div>
       </div>
-      <div class="icon_description">Quest Group</div>
+      <div class="icon_description">Group</div>
     </div>
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_single">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
-        <div class="icon_description">Quest</div>
-      </div>
-    </div>
-
-    <div class="ui-state-default lps_icon ui-droppable">
-      <div class="lps_icon_single">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
       </div>
     </div>
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_single">
-        <img class = "lps_icon_image" src="http://media.tumblr.com/tumblr_llixzh0e8a1qhi61g.png">
-        <div class="icon_description">Quest</div>
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
+      </div>
+    </div>
+
+    <div class="ui-state-default lps_icon ui-droppable">
+      <div class="lps_icon_single">
+        <img class = "lps_icon_image" src="icon.png">
+        <div class="icon_description">Application</div>
       </div>
     </div>
 
