group open start

--- a/sample2.html
+++ b/sample2.html
@@ -17,7 +17,7 @@
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_single">
-        <img class = "lps_icon_image" src="http://1.bp.blogspot.com/-yCV_vY-NriE/TdvXOiZLdJI/AAAAAAAAAAA/K5Ph59zecko/s1600/GenericAirDiskIcon.png">
+        <img class = "lps_icon_image" src="icon.png">
         <div class="icon_description">some long long long text</div>
       </div>
     </div>
@@ -38,6 +38,9 @@
       </div>
       <div class="icon_description">Group</div>
     </div>
+ <!--    <div class="group_detail" style="width:100%;height:200px;margin-top:25px; margin-bottom:25px; background-color:black; float:left;">
+
+    </div> -->
 
     <div class="ui-state-default lps_icon ui-droppable">
       <div class="lps_icon_group">
